Fix image vertical align middle in text

--- a/resources/styles/yawnoc.css
+++ b/resources/styles/yawnoc.css
@@ -122,6 +122,7 @@ img {
   align-self: center;
   max-width: 100%;
   height: auto;
+  vertical-align: middle;
 }
 .wide img {
   max-width: none;
